--- a/Android/SmartShopper/app/src/main/res/layout/activity_main.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,12 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/search_result_list"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
 </android.support.design.widget.CoordinatorLayout>
