--- a/Android/SmartShopper/app/src/main/res/menu/toolbar_menu.xml
+++ b/Android/SmartShopper/app/src/main/res/menu/toolbar_menu.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/action_search"
-        app:showAsAction="ifRoom"
+        android:hint="@string/search_hint"
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         />
 
 </menu>
