--- a/Android/SmartShopper/app/src/main/res/layout/activity_main.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
+    <!--->
+    <fragment
+        android:id="@+id/search_result_fragment"
+        android:name="androidapp.smartshopper.smartshopper.SearchFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"/>
+        <!-->
+
 </android.support.design.widget.CoordinatorLayout>
