--- a/Web/CPEN 321 Website/css/login_page.css
+++ b/Web/CPEN 321 Website/css/login_page.css
@@ -1,11 +1,14 @@
 #login-page * {
-  margin:0;
+  margin:0; 
   padding:0;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-body {
-  background:#2c3e50; /*From http://flatuicolors.com/ */
+#background {
+    position: fixed; 
+    height: 100%;
+    background-color: #2c3e50; 
+    width: 2000px; 
 }
 
 #login-page form {
@@ -56,7 +59,7 @@ body {
 #login-page li {
   margin-right: 10px; 
   position:absolute;
-  right:40px;
+  right:75px;
   bottom:60px;
   list-style:none;
   font-size:1.2em;
