--- a/Android/SmartShopper/app/src/main/res/layout/activity_main.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,11 @@
         android:id="@+id/top_parent"
         tools:context=".MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/toolbar_layout">
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:id="@+id/toolbar_layout">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -30,14 +30,14 @@
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
+        </android.support.design.widget.AppBarLayout>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/search_result_list"
-        android:layout_below="@id/toolbar_layout"/>
+        <FrameLayout
+            android:id="@+id/result_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar_layout">
+        </FrameLayout>
 
     </RelativeLayout>
 
@@ -49,15 +49,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
-    <!--->
-    <fragment
-        android:id="@+id/search_result_fragment"
-        android:name="androidapp.smartshopper.smartshopper.SearchFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"/>
-        <!-->
+        app:srcCompat="@drawable/ic_list_black_48dp" />
 
 </android.support.design.widget.CoordinatorLayout>
