--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -69,7 +69,7 @@ html(lang='en')
       for items in list_items
         for item in items
           li
-            a(href='#')
+            a(href='javascript:void(0);')
               img(src=item.data["image link"])
               h4 #{item.data.name}
             p Price: #{item.data.price}
