--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -45,9 +45,9 @@ html(lang='en')
         .col-md-12
           #custom-search-input
             .input-group.col-md-12
-              input.form-control.input-lg(type='text', placeholder='Search')
+              input.form-control.input-lg(id='search-input', type='text', placeholder='Search')
               span.input-group-btn
-                button.btn.btn-info.btn-lg(type='button')
+                button.btn.btn-info.btn-lg(id='search-btn', type='button')
                   i.glyphicon.glyphicon-search
     //-                  
       ul.products
