--- a/Web/webserver/public/css/item_searched.css
+++ b/Web/webserver/public/css/item_searched.css
@@ -5,7 +5,15 @@ ul.products {
 }
 
 ul.products li {
-    width: 200px;
+    width: 200px;  
     display: inline-block;
-    vertical-align: top; 
+    border-style: solid; 
+    border-width: 1px; 
+    text-align:center;
+    margin-left: 10px; 
+    margin-right: 10px; 
+    margin-top: 20px;    
 }
+
+
+
