--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -1,13 +1,15 @@
 doctype html
-html(lang='en')
+html
   head
-    title 	SmartShop.ca 
-    meta(charset='utf-8')
+    meta(charset='UTF-8')
+    title Login Form
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href='css/bootstrap.min.css', rel='stylesheet')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
     link(href='css/navbar.css', rel='stylesheet', type='text/css')
+    link(rel='stylesheet', href='css/login_page.css')
+    link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
   body
     // NAVIGATION BAR
     #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
@@ -28,34 +30,27 @@ html(lang='en')
                 span.caret
               ul.dropdown-menu
                 li
-                  a(href='#') Login
+                  a(href='login.html') Login
                 li
-                  a(href='#') Register
+                  a(href='register.html') Register
+                li
+                  a(href='logout.html') Logout
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | Lists
+                | Cart
                 span.caret
               ul.dropdown-menu
                 li
-                  a(href='#') Create New List
-                li
-                  a(href='#') Manage Previous Lists
-    // SEARCH BAR
-    .container
-      .row.top-buffer
-        .col-md-12
-          #custom-search-input
-            .input-group.col-md-12
-              input#search-input.form-control.input-lg(type='text', placeholder='Search')
-              span.input-group-btn
-                button#search-btn.btn.btn-info.btn-lg(type='button')
-                  i.glyphicon.glyphicon-search
-                //
-                  <a href="register.html" class="btn btn-info btn-lg" button id="search-btn" type="button">
-                  <i class="glyphicon glyphicon-search"></i>
-                  </a>
+                  a(href='#') View Full Cart
+    // Login Form
+    #login-page
+      form
+        h4  Login Information 
+        input.name(type='text', placeholder='Enter Email')
+        input.pw(type='password', placeholder='Enter Password')
+        li
+          a(href='register.html') Register
+        input.button(type='submit', value='Log in')
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
     script(src='http://localhost:8080/socket.io/socket.io.js')
-    // <script src="https://cdn.socket.io/socket.io-1.5.1.js"></script>
-    // <script src="/socket.io/socket.io.js"></script>
     script(src='js/browser.js', type='text/javascript')
