changed image link format in item_searched.pug

--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title 	SmartShop.ca 
+    title   SmartShop.ca 
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href='css/bootstrap.min.css', rel='stylesheet')
@@ -28,9 +28,9 @@ html(lang='en')
                 span.caret
               ul.dropdown-menu
                 li
-                  a(href='#') Login
+                  a(href='login.html') Login
                 li
-                  a(href='#') Register
+                  a(href='register.html') Register
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown')
                 | Lists
