--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -56,19 +56,11 @@ html(lang='en')
         for item in items
           li
             a(href='javascript:void(0);')
-              img(src=('http:' + item.data.image))
-              h4 #{item.data.name}
+              img(src=item.data["image link"])
+              h4 #{to_title_case(item.data.name)}
             p Price: #{item.data.price}
             p Store: #{item.data.store}
-			form.add-to-cart(action='cart.html', method='post')
-  			  div
-    		    label(for='qty-1') Quantity
-   			    input#qty-1.qty(type='text', name='qty-1', value='1')
-  			  p
-    		    input.btn(type='submit', value='Add to cart')
-
 
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
     script(src='http://localhost:80/socket.io/socket.io.js')
     script(src='js/browser.js', type='text/javascript')
-	
