--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -8,7 +8,7 @@ html(lang='en')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
     link(href='css/navbar.css', rel='stylesheet', type='text/css')
-    link(href='css/item_searched.css', rel='stylesheet', type='text/css')
+    link(href='css/cart.css', rel='stylesheet', type='text/css')
   body
     // NAVIGATION BAR
     #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
@@ -51,16 +51,33 @@ html(lang='en')
                   i.glyphicon.glyphicon-search
 
     // SEARCH RESULTS
-    ul.products        
-      for items in list_items
-        for item in items
-          li
-            a(href='javascript:void(0);')
-              img(src=item.data["image link"])
-              h4 #{to_title_case(item.data.name)}
-            p Price: #{item.data.price}
-            p Store: #{item.data.store}
+    #site
+      #content
+        #products
+          ul
+		  	for items in list_items
+        	  for item in items
+              li
+			  	a(href='javascript:void(0);')
+                .product-image
+                  img(src=('http:' + item.data.image))
+                .product-description(data-name= #{item.data.name}, data-price= #{item.data.price})
+                  h3.product-name #{item.data.name}
+                  p.product-price &dollar; #{item.data.price}
+                  form.add-to-cart(action='cart.html', method='post')
+                    div
+                      label(for='qty-1') Quantity
+                      input#qty-1.qty(type='text', name='qty-1', value='1')
+                    p
+                      input.btn(type='submit', value='Add to cart')
 
+					  
+					  
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
     script(src='http://localhost:80/socket.io/socket.io.js')
     script(src='js/browser.js', type='text/javascript')
+
+	
+	
+	
+
