--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -13,7 +13,7 @@ html(lang='en')
     #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='index.html') SmartShop
+          a.navbar-brand(href='/index') SmartShop
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
             span.sr-only Toggle navigation
             span.icon-bar
@@ -28,9 +28,9 @@ html(lang='en')
                 span.caret
               ul.dropdown-menu
                 li
-                  a(href='login.html') Login
+                  a(href='/login') Login
                 li
-                  a(href='register.html') Register
+                  a(href='/register') Register
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown')
                 | Lists
@@ -55,7 +55,6 @@ html(lang='en')
                   <i class="glyphicon glyphicon-search"></i>
                   </a>
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
-    script(src='http://localhost:8080/socket.io/socket.io.js')
-    // <script src="https://cdn.socket.io/socket.io-1.5.1.js"></script>
-    // <script src="/socket.io/socket.io.js"></script>
+    //script(src='http://localhost:8080/socket.io/socket.io.js')
+    script(src="/socket.io/socket.io.js", type='text/javascript')
     script(src='js/browser.js', type='text/javascript')
