--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -14,7 +14,7 @@ html(lang='en')
     #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='index.html') SmartShop
+          a.navbar-brand(href='/index') SmartShop
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
             span.sr-only Toggle navigation
             span.icon-bar
@@ -29,9 +29,9 @@ html(lang='en')
                 span.caret
               ul.dropdown-menu
                 li
-                  a(href='login.html') Login
+                  a(href='/login') Login
                 li
-                  a(href='register.html') Register
+                  a(href='/register') Register
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown')
                 | Lists
@@ -63,7 +63,8 @@ html(lang='en')
 
                        
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
-    script(src='http://localhost:80/socket.io/socket.io.js')
+    // script(src='http://localhost:80/socket.io/socket.io.js')
+    script(src="/socket.io/socket.io.js", type='text/javascript')
     script(src='js/browser.js', type='text/javascript')
 
   
