--- a/Web/webserver/views/logged_in_dashboard.pug
+++ b/Web/webserver/views/logged_in_dashboard.pug
@@ -49,5 +49,6 @@ html(lang='en')
                 button.btn.btn-info.btn-lg(type='button')
                   i.glyphicon.glyphicon-search
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
-    script(src='http://localhost:8080/socket.io/socket.io.js')
+    //script(src='http://localhost:8080/socket.io/socket.io.js')
+    script(src="/socket.io/socket.io.js", type='text/javascript')
     script(src='js/browser.js', type='text/javascript')
