--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -52,5 +52,6 @@ html(lang='en')
         input#password(type='password', name='password', required='', placeholder='Password', autocomplete='off')
         input(type='submit', value='Register', title='Register')
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
-    script(src='http://localhost:8080/socket.io/socket.io.js')
+    //script(src='http://localhost:8080/socket.io/socket.io.js')
+    script(src="/socket.io/socket.io.js", type='text/javascript')
     script(src='js/browser.js', type='text/javascript')
