--- a/Web/webserver/public/css/navbar.css
+++ b/Web/webserver/public/css/navbar.css
@@ -1,5 +1,6 @@
 #custom-bootstrap-menu.navbar-default .navbar-brand {
     color: rgba(255, 255, 255, 1);
+    text-align: center; 
 }
 #custom-bootstrap-menu.navbar-default {
     font-size: 12px;
