--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title   SmartShop.ca 
+    title   checkedout.ca 
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href='css/bootstrap.min.css', rel='stylesheet')
@@ -13,7 +13,7 @@ html(lang='en')
     #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='/index') SmartShop
+          a.navbar-brand(href='/index') CheckedOut
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
             span.sr-only Toggle navigation
             span.icon-bar
