--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -15,7 +15,7 @@ html
     #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='/index') SmartShop
+          a.navbar-brand(href='/index') Checkedout
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
             span.sr-only Toggle navigation
             span.icon-bar
@@ -47,7 +47,7 @@ html
         input.name(type='text', placeholder='Enter Email')
         input.pw(type='password', placeholder='Enter Password')
         li
-          a(href='register.html') Register
+          a(href='/register') Register
         input.button(id='login-btn' type='submit', value='Log in')
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
     //script(src='http://localhost:8080/socket.io/socket.io.js')
