--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -15,7 +15,7 @@ html(lang='en')
     #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='index.html') SmartShop
+          a.navbar-brand(href='/index') Checkedout
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
             span.sr-only Toggle navigation
             span.icon-bar
@@ -30,11 +30,11 @@ html(lang='en')
                 span.caret
               ul.dropdown-menu
                 li
-                  a(href='login.html') Login
+                  a(href='/login') Login
                 li
-                  a(href='register.html') Register
+                  a(href='/register') Register
                 li
-                  a(href='logout.html') Logout
+                  a(href='/logout') Logout
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown')
                 | Cart
@@ -46,7 +46,7 @@ html(lang='en')
     .Register
       form(method='post')
         // action="#" URL OF WHERE TO SEND THE DATA
-        h5  Welcome to SmartShop! 
+        h5  Welcome to Checkedout! 
         input(type='text', required='', placeholder='Name', autocomplete='off')
         input#email(type='text', required='', placeholder='Email', autocomplete='off')
         input#password(type='password', name='password', required='', placeholder='Password', autocomplete='off')
