--- a/Android/SmartShopper/app/src/main/res/menu/toolbar_menu.xml
+++ b/Android/SmartShopper/app/src/main/res/menu/toolbar_menu.xml
@@ -3,12 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/login"
+        android:icon="@drawable/ic_person_white_24dp"
+        android:title="Login"
+        app:showAsAction="collapseActionView|ifRoom" />
+
+    <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/action_search"
         android:hint="@string/search_hint"
         app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        />
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 
 </menu>
