--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -1,12 +1,61 @@
-doctype html
-html(lang='en')
+
+extends layout.pug
+
+block append head-content
+  link(rel='stylesheet', href='css/register_page.css')
+  link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
+
+block navigation-bar
+  #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
+    .container-fluid
+      .navbar-header
+        a.navbar-brand(href='/index') Checkedout
+        button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+      .collapse.navbar-collapse.navbar-menubuilder
+        ul.nav.navbar-nav.navbar-right
+          // DROP DOWN MENU
+          li.dropdown
+            a.dropdown-toggle(href='#', data-toggle='dropdown')
+              | Account
+              span.caret
+            ul.dropdown-menu
+              li
+                a(href='/login') Login
+              li
+                a(href='/register') Register
+              li
+                a(href='/logout') Logout
+          li.dropdown
+            a.dropdown-toggle(href='#', data-toggle='dropdown')
+              | Cart
+              span.caret
+            ul.dropdown-menu
+              li
+                a(href='#') View Full Cart
+
+block custom-widget
+  .Register
+    form(method='post')
+      // action="#" URL OF WHERE TO SEND THE DATA
+      h5  Welcome to Checkedout! 
+      input(type='text', required='', placeholder='Name', autocomplete='off')
+      input#email(type='text', required='', placeholder='Email', autocomplete='off')
+      input#password(type='password', name='password', required='', placeholder='Password', autocomplete='off')
+      input(type='submit', value='Register', title='Register')                    
+//-
+  doctype html
+  html(lang='en')
   head
-    meta(charset='UTF-8')
     title Registration Form
+    meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(href='css/bootstrap.min.css', rel='stylesheet')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+    link(href='css/bootstrap.min.css', rel='stylesheet')
     link(href='css/navbar.css', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='css/register_page.css')
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
@@ -42,17 +91,18 @@ html(lang='en')
               ul.dropdown-menu
                 li
                   a(href='#') View Full Cart
+                  
     // Registration Page
     .Register
       form(method='post')
         // action="#" URL OF WHERE TO SEND THE DATA
         h5  Welcome to Checkedout! 
-        input(id='input-user', type='text', required='', placeholder='Name', autocomplete='off')
-        input#email(id='input-email', type='text', required='', placeholder='Email', autocomplete='off')
-        input#password(id='input-password', type='password', name='password', required='', placeholder='Password', autocomplete='off')
+        input(type='text', required='', placeholder='Name', autocomplete='off')
+        input#email(type='text', required='', placeholder='Email', autocomplete='off')
+        input#password(type='password', name='password', required='', placeholder='Password', autocomplete='off')
         input(type='submit', value='Register', title='Register')
 
     script(src='js/jquery-3.1.1.min.js', type='text/javascript')
     //script(src='http://localhost:8080/socket.io/socket.io.js')
-    script(src="/socket.io/socket.io.js", type='text/javascript')
+    script(src='/socket.io/socket.io.js', type='text/javascript')
     script(src='js/browser.js', type='text/javascript')
