--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -34,4 +34,66 @@ block navigation-bar
 
 block custom-widget
   include search-bar.pug
+//-
+  doctype html
+  html(lang='en')
+    head
+      title   checkedout.ca
+      meta(charset='utf-8')
+      meta(name='viewport', content='width=device-width, initial-scale=1')
+      link(href='css/bootstrap.min.css', rel='stylesheet')
+      script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
+      script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+      link(href='css/navbar.css', rel='stylesheet', type='text/css')
+    body
+      // NAVIGATION BAR
+      #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
+        .container-fluid
+          .navbar-header
+            a.navbar-brand(href='/index') CheckedOut
+            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
+              span.sr-only Toggle navigation
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+          .collapse.navbar-collapse.navbar-menubuilder
+            ul.nav.navbar-nav.navbar-right
+              // DROP DOWN MENU
+              li.dropdown
+                a.dropdown-toggle(href='#', data-toggle='dropdown')
+                  | Account
+                  span.caret
+                ul.dropdown-menu
+                  li
+                    a(href='/login') Login
+                  li
+                    a(href='/register') Register
+              li.dropdown
+                a.dropdown-toggle(href='#', data-toggle='dropdown')
+                  | Lists
+                  span.caret
+                ul.dropdown-menu
+                  li
+                    a(href='#') Create New List
+                  li
+                    a(href='#') Manage Previous Lists
+      // SEARCH BAR
+      .container
+        .row.top-buffer
+          .col-md-12
+            #custom-search-input
+              .input-group.col-md-12
+                input#search-input.form-control.input-lg(type='text', placeholder='Search')
+                span.input-group-btn
+                  button#search-btn.btn.btn-info.btn-lg(type='button')
+                    i.glyphicon.glyphicon-search
+                  //
+                    <a href="register.html" class="btn btn-info btn-lg" button id="search-btn" type="button">
+                    <i class="glyphicon glyphicon-search"></i>
+                    </a>
+      script(src='js/jquery-3.1.1.min.js', type='text/javascript')
+      //script(src='http://localhost:8080/socket.io/socket.io.js')
+      script(src="/socket.io/socket.io.js", type='text/javascript')
+      script(src='js/browser.js', type='text/javascript')
+
 
