hard coded registration and logging in works

--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -9,7 +9,8 @@ block navigation-bar
           // DROP DOWN MENU
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown')
-              | Account
+              // | Account
+              | Welcome, #{userID}
               span.caret
             ul.dropdown-menu
               li
