--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -31,12 +31,12 @@ block navigation-bar
 block custom-widget
   // Login Form
   #login-page
-    form 
-      input.name(type='text', placeholder='Enter Email')
-      input.pw(type='password', placeholder='Enter Password')
+    form(method='post') 
+      input.name(type='text', name='userID' placeholder='Enter Name')
+      input.pw(type='password', name='password' placeholder='Enter Password')
       li
         a(href='/register') Register
-      input.button(id='login-btn' type='submit', value='Log in')   
+      input.button(type='submit', value='Log in')   
                
 //-
   doctype html
