--- a/Web/webserver/views/search-bar.pug
+++ b/Web/webserver/views/search-bar.pug
@@ -4,7 +4,7 @@
     .col-md-12
       #custom-search-input
         .input-group.col-md-12
-          input#search-input.form-control.input-lg(type='text', placeholder='Search')
+          input#search-input.form-control.input-lg(type='text', placeholder='Search', autofocus)
           span.input-group-btn
             button#search-btn.btn.btn-info.btn-lg(type='button')
-              i.glyphicon.glyphicon-search
+              i.glyphicon.glyphicon-search                
