Some Changes To Login and Register

--- a/Web/webserver/public/css/register_page.css
+++ b/Web/webserver/public/css/register_page.css
@@ -5,14 +5,15 @@
 }
 
 body {
-	background-color: #2c3e50;
+	background-image: url('../CheckedOutBackgroundTest.png');
+    background-size: 1920px 1000px; 
 }
 
 .Register form {
     position:relative;
     width:400px;
     height:375px;
-    margin:50px auto;
+    margin:150px auto;
     text-align:center;
     background:#ecf0f1;
     padding:40px;
@@ -109,3 +110,75 @@ input {
     box-shadow: 2px 2px 20px  #2c90c6, #fff 0 -1px 2px;
 }
 
+
+
+
+.navbar-header img {
+    margin-top: -65px; 
+    margin-left: 41%;
+    position: fixed; 
+     
+}
+
+
+#custom-bootstrap-menu.navbar-default {
+    font-size: 14px;
+    border-width: 0px;
+    border-radius: 0px;
+    height: 150px; 
+    background-color: #fff;
+}
+
+
+#custom-bootstrap-menu.navbar-default .navbar-nav>li>a {
+    background-color: #fff;
+}
+
+@media (min-width: 768px)
+.navbar-nav {
+    float: left;
+    margin-top: 100px;
+}
+
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+}
+
+
+@media (min-width: 768px)
+.navbar-right {
+    float: right!important;
+    margin-right: -15px;
+    margin-top: 100px; 
+}
+
+
+#custom-bootstrap-menu.navbar-default .navbar-nav>li>a {
+    color: #979aa0;
+    background: 0px;
+}
+
+#login-page a, a:visited {
+    text-decoration: none;
+    color: #7f8c8d;
+    font-weight: 400;
+    text-shadow: none;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+
+.nav>li {
+    position: relative;
+    display: block;
+    margin-top: 100px;
+}
+
+
+
+#custom-bootstrap-menu.navbar-default .navbar-nav>li>a:hover, #custom-bootstrap-menu.navbar-default .navbar-nav>li>a:focus {
+    color: rgba(255, 255, 255, 1);
+    background-color: #dee1e5;
+    border-radius: 7px;
+}
