--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -56,7 +56,8 @@ block custom-widget
       #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
         .container-fluid
           .navbar-header
-            a.navbar-brand(href='/index') Checkedout
+            a.navbar-brand(href='/index') 
+			  img('CheckedOutLogo4.jpeg')
             button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
               span.sr-only Toggle navigation
               span.icon-bar
