Added Top Logo to login.pug

--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -57,7 +57,7 @@ block custom-widget
         .container-fluid
           .navbar-header
             a.navbar-brand(href='/index') 
-			  img('CheckedOutLogo4.jpeg') 
+			  img(src='../public/images/CheckedOutLogo4.jpeg')
             button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
               span.sr-only Toggle navigation
               span.icon-bar
