--- a/Web/webserver/views/navbar-header.pug
+++ b/Web/webserver/views/navbar-header.pug
@@ -1,6 +1,6 @@
 .navbar-header
   a.navbar-brand(href='/') 
-  img(src='../public/images/CheckedOutLogo4.jpeg') 
+  img(src='CheckedOutLogo4.jpeg') 
   button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
     span.sr-only Toggle navigation
     span.icon-bar
