Fixed Some bugs

--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -31,7 +31,8 @@ block navigation-bar
 block custom-widget
   // Login Form
   #login-page
-    form(method='post') 
+    form(method='post')
+      h4 Login Information
       input.name(type='text', name='userID' placeholder='Enter Name')
       input.pw(type='password', name='password' placeholder='Enter Password')
       li
