--- a/Web/webserver/views/navbar-header.pug
+++ b/Web/webserver/views/navbar-header.pug
@@ -1,8 +1,2 @@
-.navbar-header
-  a.navbar-brand(href='/') 
-  img(src='CheckedOutLogo4.jpeg') 
-  button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
-    span.sr-only Toggle navigation
-    span.icon-bar
-    span.icon-bar
-    span.icon-bar
+.navbar-header 
+  img(src='CheckedOutLogo4.jpeg' href='/')
