--- a/Web/webserver/public/css/register_page.css
+++ b/Web/webserver/public/css/register_page.css
@@ -114,7 +114,7 @@ input {
 
 
 .navbar-header img {
-    margin-top: -65px; 
+    margin-top: -50px; 
     margin-left: 41%;
     position: fixed; 
      
@@ -127,6 +127,7 @@ input {
     border-radius: 0px;
     height: 150px; 
     background-color: #fff;
+    margin: 0;
 }
 
 
