Made Logo on login and register link to homepage

--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -33,7 +33,7 @@ block custom-widget
   .Register
     form(method='post')
       // action="#" URL OF WHERE TO SEND THE DATA
-      h5  Welcome to Checkedout! 
+      h5  Welcome to CheckedOut! 
       input(type='text', name='userID', required='', placeholder='Name', autocomplete='off')
       input#email(type='text', name='email', required='', placeholder='Email', autocomplete='off')
       input#password(type='password', name='password', required='', placeholder='Password', autocomplete='off')
