--- a/Web/webserver/views/navbar-header.pug
+++ b/Web/webserver/views/navbar-header.pug
@@ -1,2 +1,3 @@
-.navbar-header 
-  img(src='CheckedOutLogo4.jpeg', href='/')
+.navbar-header
+  a(href='/index')
+    img(src='CheckedOutLogo4.jpeg')
