Trying to get css to show up on register

--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -2,7 +2,7 @@
 extends layout.pug
 
 block append head-content
-  link(rel='stylesheet', href='css/register_page.css')
+  link(href='css/register_page.css' rel='stylesheet')
   link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
 
 block navigation-bar
