--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 
 block append head-content
-  link(href='css/login_page.css', rel='stylesheet', )
+  link(href='css/login_page.css', rel='stylesheet')
   link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
 
 block navigation-bar
