added initial implementaiton of login, acc creation, and detailed product page

--- a/Android/SmartShopper/app/src/main/res/drawable/splash_background.xml
+++ b/Android/SmartShopper/app/src/main/res/drawable/splash_background.xml
@@ -7,7 +7,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/place_holder" />
+            android:src="@mipmap/logo_text" />
     </item>
 
 </layer-list>
