--- a/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
@@ -1,13 +1,71 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="androidapp.smartshopper.smartshopper.DetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+
+        <ImageView
+            android:id="@+id/detail_img"
+            android:layout_width="100dip"
+            android:layout_height="100dip"
+            android:layout_marginRight="10dip"
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="25dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Some Product"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/detail_img"
+            android:layout_toEndOf="@+id/detail_img"
+            android:layout_marginStart="22dp"
+            android:id="@+id/product_name"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:text="Some Store"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/product_name"
+            android:layout_alignStart="@+id/product_name"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/product_store" />
+
+        <TextView
+            android:text="$xx.xx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/detail_img"
+            android:layout_alignStart="@+id/product_store"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/product_price" />
+
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/quantity"
+            android:layout_marginTop="26dp"
+            android:layout_below="@+id/detail_img"
+            android:layout_alignStart="@+id/detail_img" />
+
+        <Button
+            android:text="To Cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button"
+            android:layout_alignBottom="@+id/quantity"
+            android:layout_alignEnd="@+id/product_price"
+            android:layout_alignTop="@+id/quantity" />
+
+    </RelativeLayout>
 </FrameLayout>
