--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -1,5 +1,8 @@
 extends layout.pug
 
+block append head-content
+  link(href='css/index.css', rel='stylesheet')
+
 block navigation-bar
   #custom-bootstrap-menu.navbar.navbar-default(role='navigation')
     .container-fluid
