Small Changes to item_searched

--- a/Web/webserver/public/css/item_searched.css
+++ b/Web/webserver/public/css/item_searched.css
@@ -18,6 +18,8 @@ ul.products li {
 ul.products img {
     max-width: 180px;
     max-height: 180px;
+	min-height: 180px; 
+	min-width: 180px; 
 }
 
 
