can send acc_create/login requests to main server

--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -13,7 +13,7 @@ block navigation-bar
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               // | Account
-              | Welcome, #{userID}
+              | Welcome, #{name}
               span.caret
             ul.dropdown-menu
               li
