--- a/Web/webserver/views/login.pug
+++ b/Web/webserver/views/login.pug
@@ -33,7 +33,7 @@ block custom-widget
   #login-page
     form(method='post')
       h4 Login Information
-      input.name(type='text', name='userID' placeholder='Enter Email')
+      input.email(type='text', name='email' placeholder='Enter Email')
       input.pw(type='password', name='password' placeholder='Enter Password')
       li
         a(href='/register') Register
