--- a/Web/webserver/public/css/item_searched.css
+++ b/Web/webserver/public/css/item_searched.css
@@ -4,30 +4,10 @@ body {
 }
 
 
-
 ul.products {
     margin: 0 auto;
     max-width: 1200px;
     margin-top: 40px;  
-	
-}
-
-ul.products li {
-    width: 200px;  
-    display: inline-block;
-    border-style: solid; 
-    border-width: 1px; 
-    text-align:center;
-    margin-left: 10px; 
-    margin-right: 10px; 
-    margin-top: 20px;    
-}
-
-ul.products img {
-    max-width: 180px;
-    max-height: 180px;
-	min-height: 180px; 
-	min-width: 180px; 
 }
 
 
@@ -35,6 +15,62 @@ ul.products img {
     margin-right: -15px;
     margin-left: -15px;
     margin-top: 60px;
+}
+
+
+.btn.btn-default {
+	margin-left: 148px; 
+	background-color: #5bc0de; 
+	color: #fff; 	
+}
+
+.thumbnail {
+    display: block;
+    padding: 4px;
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    -webkit-transition: border .2s ease-in-out;
+    -o-transition: border .2s ease-in-out;
+    transition: border .2s ease-in-out;
+}
+
+
+
+.thumbnail img{
+    margin-left: 0px; 
+}
+
+.thumbnail .caption {
+    padding: 9px;
+    color: #333;
+    margin-left: 100px;
+    margin-top: -120px;
+    margin-bottom: -50px;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    margin-left: 970px;
+    margin-top: -200px;
+}
+
+
+.btn.btn-default {
+    margin-left: 148px;
+    background-color: #5bc0de;
+    color: #fff;
+    margin-left: 965px;
+    margin-top: -96px;
+}
+
+
+.btn-lg {
+    margin-left: 30px; 
 }
 
 
