Fixed Sizes Of Images To 100x100 px

--- a/Web/webserver/public/css/item_searched.css
+++ b/Web/webserver/public/css/item_searched.css
@@ -41,6 +41,8 @@ ul.products {
 
 .thumbnail img{
     margin-left: 0px; 
+    max-height: 100px;
+    max-width: 100px; 
 }
 
 .thumbnail .caption {
