Fixed bugs when searching and adding to list

--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -64,9 +64,8 @@ block custom-widget
             span(aria-hidden='true') ×
           h4#myModalLabel.modal-title Shopping Cart
         .modal-body
-        .modal-footer
-          button.btn.btn-default(type='button', data-dismiss='modal') Close
-          button.btn.btn-primary(type='button') Save changes
+        .modal-footer.list
+          button.btn.btn-primary.saveChanges(type='button') Save changes
       
         
 
