--- a/Web/webserver/public/css/item_searched.css
+++ b/Web/webserver/public/css/item_searched.css
@@ -1,13 +1,20 @@
 body {
-    background-image: url('../Searched_.jpg');
+    /*background-image: url('../Searched_.jpg');
     background-size: 1920px 1000px; 
+    */
+    
+    background: url(http://liondocs.com/wp-content/uploads/2014/12/Website-Background.jpg) , linear-gradient(to top, #ffee75 3%,#ffb06b 27%,#e86f97 50%,#b08cff 75%,#5477af 100%);
+    background-blend-mode: luminosity;  
+    background-size: cover;  
 }
+
+
 
 
 ul.products {
     margin: 0 auto;
     max-width: 1200px;
-    margin-top: 40px;  
+    margin-top: -20px;  
 }
 
 
@@ -29,7 +36,7 @@ ul.products {
     padding: 4px;
     margin-bottom: 20px;
     line-height: 1.42857143;
-    background-color: #fff;
+    background-color: #efefef;
     border: 1px solid #ddd;
     border-radius: 12px;
     -webkit-transition: border .2s ease-in-out;
@@ -74,6 +81,42 @@ ul.products {
 .btn-lg {
     margin-left: 30px; 
 }
+
+.media img {
+    border: 0;
+    max-height: 100px;
+    max-width: 100px;
+}
+
+.media, .media-body {
+    zoom: 1;
+    overflow: visible;
+}
+
+.media-heading {
+    margin-top: -100px;
+    margin-bottom: 5px;
+    margin-left: 110px;
+}
+
+p.itemStore {
+    margin-top: -2px;
+}
+
+button.btn.btn-primary.saveChanges {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    margin-left: 0px;
+    margin-top: 0px; 
+}
+
+.modal-footer.list {
+    padding: 15px;
+    text-align: center;
+    border-top: 1px solid #e5e5e5;
+}
+
 
 
 
