Visit Website Button now functional

--- a/Web/webserver/public/css/item_searched.css
+++ b/Web/webserver/public/css/item_searched.css
@@ -101,6 +101,11 @@ ul.products {
 
 p.itemStore {
     margin-top: -2px;
+    margin-left: 110px;
+}
+
+p.itemPrice {
+    margin-left: 110px;
 }
 
 button.btn.btn-primary.saveChanges {
