--- a/Android/SmartShopper/app/src/main/res/menu/toolbar_menu.xml
+++ b/Android/SmartShopper/app/src/main/res/menu/toolbar_menu.xml
@@ -3,17 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/login"
-        android:icon="@drawable/ic_person_white_24dp"
-        android:title="Login"
-        app:showAsAction="collapseActionView|ifRoom" />
-
-    <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/action_search"
         android:hint="@string/search_hint"
-        app:showAsAction="collapseActionView|ifRoom"
+        app:showAsAction="collapseActionView|always"
         app:actionViewClass="android.support.v7.widget.SearchView" />
+
+    <item
+        android:id="@+id/search_filter"
+        android:icon="@drawable/ic_filter_list_white_24dp"
+        android:title="Search Filter"
+        app:showAsAction="collapseActionView|always"
+        />
+
+    <item
+        android:id="@+id/login"
+        android:icon="@drawable/ic_person_white_24dp"
+        android:title="Login"
+        app:showAsAction="collapseActionView|always" />
 
 </menu>
